data/collection/fixes/descriptions/java/JDK-8069069
JDK build is failing because of this:

import com.sun.tools.javac.resources.CompilerProperties;
                                    ^
  symbol:   class CompilerProperties
  location: package com.sun.tools.javac.resources
/opt/jprt/T/P1/153229.maurizio/s/langtools/src/jdk.compiler/share/classes/com/sun/tools/javac/comp/DeferredAttr.java:32: error: package com.sun.tools.javac.resources.CompilerProperties does not exist
import com.sun.tools.javac.resources.CompilerProperties.Fragments;
                                                       ^
/opt/jprt/T/P1/153229.maurizio/s/langtools/src/jdk.compiler/share/classes/com/sun/tools/javac/comp/DeferredAttr.java:801: error: cannot find symbol
                            checkContext.report(tree, diags.fragment(Fragments.IncompatibleArgTypesInMref));
                                                                     ^
  symbol:   variable Fragments
  location: class DeferredAttr.DeferredAttrNode.StructuralStuckChecker
3 errors

It cannot reliably be reproduced - but we need to revert the code not to depend on genertated sources (as an interim workaround).